--- a/packages/SystemUI/res/values/config.xml
+++ b/packages/SystemUI/res/values/config.xml
@@ -357,4 +357,7 @@
 
     <!-- When true, show charging animation -->
     <bool name="config_show_battery_charging_anim">true</bool>
+
+    <bool name="config_show4gForIWlan">false</bool>
+    <bool name="config_showSignalForIWlan">false</bool>
 </resources>
